@@ -9,6 +9,7 @@
 - Fixed undoing guitar tuning changes
 - When printing multiple tracks, draw a line between them to make clear they belong toghether
 - Added ability to maximize tracks
+- Improved handling of on/off controllers, namely making sustain usable.
 
 1.2b3
 - Refactored preferences to look better, be cleaner and allow setting a default value for "follow playback"
